# Untitled-FRC-Physics-Library

./: .clang-format2  .gitignore  .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  JSim.json  QUICKSTART.md  README.md  RELEASE_SUMMARY.md  VERSIONING.md  index.html
.github/workflows/: ci.yml  deploy-mkdocs.yml  deploy.yml  release.yml
aerodynamics/: index.html
api/annotated/: index.html
api/class_member_enums/: index.html
api/class_member_functions/: index.html
api/class_member_typedefs/: index.html
api/class_member_variables/: index.html
api/class_members/: index.html
api/classes/: index.html
api/files/: index.html
api/functions/: index.html
api/hierarchy/: index.html
api/javadocs/: allclasses-index.html  allpackages-index.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  serialized-form.html  type-search-index.js
api/links/: index.html
api/macros/: index.html
api/modules/: index.html
api/namespace_member_enums/: index.html
api/namespace_member_functions/: index.html
api/namespace_member_typedefs/: index.html
api/namespace_member_variables/: index.html
api/namespace_members/: index.html
api/namespaces/: index.html
api/pages/: index.html
api/variables/: index.html
api_usage/: index.html
apps/sim-runtime/: contract_check.py  full_feature_test.py  graphics_bridge.py  main_loop.py  math_contract_check.py  math_primitives.py  robot_loader.py  runtime_defaults.py  sensor_pipeline.py  sim_options.py  telemetry_schema.py  wpilib_bridge.py
apps/viewer-plugin/: dashboard.py  renderer.py
architecture/: index.html
cad-import/: CAD_IMPORT.md  FIELD_RECREATION_GUIDE.md  __init__.py  advantagescope_integration.py  arena_state.py  config.py  examples.py  exporter.py  field_2025_definition.py  field_2026_andymark_definition.py  field_setup_examples.py  geometry_utils.py  importer.py  stl_loader.py  tests.py  urdf_parser.py
collision_impulses/: index.html
core/frcsim/: physics_world.hpp
core/gamepiece-models/: sphere.cpp
core/physics-core/: CMakeLists.txt
docs/: integrators.md  vector.md
drivetrain_mechanism_dynamics/: index.html
examples/cpp/: minimal_world.cpp  modular_bodies_demo.cpp  robot_assembly_demo.cpp
examples/java/: Robot.java  ShooterPredictionExample.java
getting_started/: index.html
integrators/: index.html
jsim/examples/: BackspinFlywheelExample.java  BackspinShooterSubsystem.java  FlywheelExample.java  FlywheelHoodExample.java  FlywheelHoodSubsystem.java  FlywheelPredictionExample.java  FlywheelShooterSubsystem.java  FlywheelSubsystem.java  FlywheelSubsystemExample.java  IntakeSubsystem.java  RobotContainer.java  ShooterSubsystem.java
magnus/: index.html
math_index/: index.html
matrix/: index.html
mkdocs/: github-workflows.md  mkdocs.yml
mkdocs/docs/: CNAME  aerodynamics.md  api_usage.md  architecture.md  collision_impulses.md  drivetrain_mechanism_dynamics.md  getting_started.md  index.md  integrators.md  magnus.md  math_index.md  matrix.md  physics_models.md  physics_reference.md  quaternion.md  units_and_conventions.md  vector.md
mkdocs/site/: 404.html  index.html
physics_models/: index.html
physics_reference/: index.html
quaternion/: index.html
scripts/: build-all.sh  check-telemetry-contract.sh  run-tests.sh
search/: search_index.json
season_authoring/: index.html
units_and_conventions/: index.html
vector/: index.html
vendordep/: JSim.json  README.md  RenSim.json  build.gradle  config.gradle  publish.gradle
vendordep/tests/: arena_presets_test.cpp  assembly_test.cpp  ball_gamepiece_sim_test.cpp  ball_physics_test.cpp  boundary_test.cpp  deformable_test.cpp  forces_test.cpp  integration_test.cpp  math_test.cpp  rigidbody_test.cpp  (+4 more)
(+1230 files in other folders)
